[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
# base58 = "0.2.0"
# chrono = "0.4.41"
# hex = "0.4.3"
libp2p = { version = "0.54.1", features = [
    "floodsub",
    "plaintext",
    "tcp",
    "tokio",
    "yamux",
] }
ratatui = "0.29.0"
# secp256k1 = { version = "0.31.0", features = [
#     "global-context",
#     "rand",
#     "serde",
# ] }
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
# sha2 = "0.10"
tokio = { version = "1.45.1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
